--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.0.12",
     "multer": "^1.3.0",
     "nodemailer": "^4.6.4",
+    "nodemon": "^1.18.4",
     "npm": "^5.8.0",
     "react-dom": "^16.3.2"
   }
