--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,14 @@
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "loadjs": "^3.5.4",
+    "npm": "^6.4.1",
     "particlesjs": "^2.2.2",
     "react": "^16.3.1",
     "react-dom": "^16.3.2",
     "react-particles-js": "^2.1.3",
     "react-places-autocomplete": "^7.1.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
+    "react-scripts": "^2.0.4",
     "react-star-ratings": "^2.2.0"
   },
   "scripts": {
