--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.18.2",
     "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
+    "cryptiles": "^4.1.2",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "jsonwebtoken": "^8.2.1",
